--- a/MaximumFlowProblem/MaximumFlowProblem.vcxproj
+++ b/MaximumFlowProblem/MaximumFlowProblem.vcxproj
@@ -147,6 +147,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="AdjacencyList.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
