--- a/MaximumFlowProblem/MaximumFlowProblem.vcxproj.filters
+++ b/MaximumFlowProblem/MaximumFlowProblem.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="Graph.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AdjacencyList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
